Fixed bug with overlapping sections & some design fixes

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,6 @@
 // Variables
 $primary-color: #101010;
-$secondary-color: #ffc046;
+$secondary-color: #ffc758;
 $tertiary-color: #ffcb62;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
