--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -166,7 +166,7 @@
 .bottom-line {
   margin: 1.5rem auto;
   width: 15%;
-  height: 3px;
+  height: 2px;
 
   &-primary {
     background: $primary-color;
